--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body{
     padding: 1rem;
     min-height: 90vh;
     background-color:azure;
+    font-family: 'poppins', sans-serif;
 }
 
 
@@ -24,4 +25,8 @@ body{
     #app{
         max-width: 400px;
     }
+}
+
+.small-icon svg{
+    width: 1em;
 }
